# ares-sc2

./: .flake8  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  building_locations.ipynb  dev-guide.html  index.html  mkdocs.yml  objects.inv  padded_kernel_testing.ipynb  pyproject.toml  pytest.xml  rust_helpers.pyi
.github/workflows/: lint.yml  orchestrator.yml  pages.yml  release.yml  run_bot_game.yml  test.yml
MapAnalyzer/: Debugger.py  MapData.py  Pather.py  Polygon.py  Region.py  __init__.py  constants.py  constructs.py  decorators.py  destructibles.py  exceptions.py  utils.py
MapAnalyzer/cext/: __init__.py  mapanalyzerext.cp311-win_amd64.pyd  mapanalyzerext.cp39-win_amd64.pyd  wrapper.py
MapAnalyzer/cext/src/: ma_ext.c
api_reference/: index.html  manager_mediator.html
api_reference/behaviors/: combat_behaviors.html  group_combat_behaviors.html  index.html  macro_behaviors.html
contributing/: index.html
cython_extensions/: __init__.py  bootstrap.cp311-win_amd64.pyd  bootstrap.pyx  combat_utils.pyx  general_utils.pyx  geometry.pyx  map_analysis.pyx  numpy_helper.pyx  placement_solver.pyx  turn_rate.pyx  unit_data.pyx  units_utils.pyx
docs/: .pages  behaviors.md  combat_behaviors.md  dev-guide.md  index.md  macro_behaviors.md  managers.md  mediator.md  reference.md  tutorials.md
docs/api_reference/: index.md  manager_mediator.md
docs/api_reference/behaviors/: combat_behaviors.md  group_combat_behaviors.md  index.md  macro_behaviors.md
docs/api_reference/cython_extensions/: combat_utils.md  general_utils.md  geometry.md  index.md  placement_solver.md  units_utils.md
docs/contributing/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: assigning_unit_roles.md  build_runner.md  chat_debug.md  combat_maneuver_example.md  custom_behaviors.md  custom_building_placements.md  gotchas.md  index.md  influence_and_pathing.md  installation.md  managing_production.md  migrating.md  tips_and_tricks.md  unit_squads_group_behaviors.md
notebooks/: geometry_and_terrain_cython.ipynb  python_to_cython.ipynb  terran_building_locations.ipynb
sc2_helper/: combat_simulator.py  helper_functions.py  sc2_helper.cp310-win_amd64.pyd  sc2_helper.cp311-win_amd64.pyd  sc2_helper.cp312-win_amd64.pyd  sc2_helper.cp313-win_amd64.pyd  sc2_helper.pyd  test.py
search/: search_index.json
src/ares/: __init__.py  behavior_exectioner.py  build_parser.py  building_placements.yml  cache.py  chat_debug.py  config.yml  config_parser.py  consts.py  custom_bot_ai.py  cython_functions.pyi  cython_functions.pyx  debug_spawn.py  example_docstrings.py  main.py  protoss_building_placements.yml
src/ares/behaviors/: __init__.py  behavior.py  mining.py  spawn_controller.py
src/ares/behaviors/combat/: __init__.py  combat_behavior.py  combat_maneuver.py
src/ares/behaviors/macro/: __init__.py  addon_swap.py  auto_supply.py  build_structure.py  build_workers.py  macro_behavior.py  (+12 more)
src/ares/build_runner/: build_order_parser.py  build_order_runner.py  build_order_step.py
src/ares/combat/: __init__.py
src/ares/cython_extensions/: combat_utils.pyi  combat_utils.pyx  cython_functions.pyi  cython_functions.pyx  flood_fill.pyx  general_utils.pyi  general_utils.pyx  geometry.pyi  geometry.pyx  placement_solver.pyi  placement_solver.pyx  units_utils.pyi  units_utils.pyx
src/ares/dicts/: ability_cooldowns.py  aoe_ability_to_range.py  baneling_magic_numbers.py  cost_dict.py  does_not_use_larva.py  enemy_detector_ranges.py  enemy_vs_ground_static_defense_ranges.py  pickup_range.py  structure_to_building_size.py  turn_rate.py  unit_alias.py  unit_data.py  unit_tech_requirement.py  weight_costs.py
src/ares/managers/: ability_tracker_manager.py  build_runner.py  building_manager.py  combat_manager.py  combat_sim_manager.py  creep_manager.py  data_manager.py  enemy_to_base_manager.py  flying_structure_manager.py  grid_manager.py  hub.py  intel_manager.py  manager.py  manager_mediator.py  nydus_manager.py  path_manager.py  placement_manager.py  production_manager.py  resource_manager.py  squad_manager.py  strategy_manager.py  terrain_manager.py  terrain_manager.pyx  unit_cache_manager.py  unit_memory_manager.py  unit_role_manager.py  warp_in_manager.py
src/ares/production/: base_production.py
src/ares/stubs/: combat_utils.pyi  cython_functions.pyi  flood_fill.pyi  general_utils.pyi  geometry.pyi  placement_solver.pyi  units_utils.pyi
src/tests/: test_app.py
stylesheets/: extra.css
tests/: Dockerfile-runbot  conftest.py  generate_pickle_data.py  ladder.py  load_bot_from_pickle.py  mock_build_order.py  mock_config.py  test_build_runner.py  test_custom_bot_ai.py  test_manager_mediator.py  test_run.py  travis_test_script.py
tests/behaviors/combat/: test_combat_maneuver.py
tests/behaviors/macro/: test_auto_supply.py
tests/managers/: test_ability_tracker_manager.py  test_building_manager.py  test_data_manager.py  test_grid_manager.py  test_intel_manager.py  test_path_manager.py  test_placement_manager.py  test_resource_manager.py  test_unit_role_manager.py
tests/maps/: BotMicroArena_6.SC2Map
tests/pickle_data/: AncientCisternAIE.xz  BerlingradAIE.xz  DragonScalesAIE.xz  Equilibrium513AIE.xz  GoldenAura513AIE.xz  GoldenauraAIE.xz  Gresvan513AIE.xz  GresvanAIE.xz  HardLead513AIE.xz  HardwireAIE.xz  IncorporealAIE_v4.xz  InfestationStationAIE.xz  InsideAndOutAIE.xz  MoondanceAIE.xz  Oceanborn513AIE.xz  PersephoneAIE_v4.xz  PylonAIE_v4.xz  RoyalBloodAIE.xz  SiteDelta513AIE.xz  StargazersAIE.xz  TorchesAIE_v4.xz  WaterfallAIE.xz
tests/test_bots/: melee_bot.py  micro_bot.py
tutorials/: assigning_unit_roles.html  build_runner.html  chat_debug.html  combat_maneuver_example.html  config_file.html  custom_behaviors.html  custom_building_placements.html  gotchas.html  index.html  influence_and_pathing.html  managing_production.html  migrating.html  tips_and_tricks.html  unit_squads_group_behaviors.html
(+47 files in other folders)
