[tool.poetry]
name = "ares-sc2"
version = "0.1.0"
description = ""
authors = ["Tom Kerr <tomkerrdev@gmail.com>"]
readme = "README.md"
packages = [{include = "ares_sc2"}]
homepage = "https://github.com/AresSC2/ares-sc2"
repository = "https://github.com/AresSC2/ares-sc2"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.lint.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
